Shop Products: Increased animation speed; Fix text overlapping;

--- a/src/screens/product_shop/style.scss
+++ b/src/screens/product_shop/style.scss
@@ -26,7 +26,6 @@
     // max-height: 280px;
     h5 {
       flex: 1;
-      white-space: nowrap;
     }
     img {
       width: 100%;
